Import of EBRUNI/HTML-Template-Pro-Extension-0.10 from CPAN.
gitpan-cpan-distribution: HTML-Template-Pro-Extension
gitpan-cpan-version:      0.10
gitpan-cpan-path:         EBRUNI/HTML-Template-Pro-Extension-0.10.tar.gz
gitpan-cpan-author:       EBRUNI
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,15 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         HTML-Template-Pro-Extension
-version:      0.09
-version_from: Extension.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                HTML-Template-Pro-Extension
+version:             0.10
+abstract:            Plugin extension for HTML::Template::Pro module
+license:             ~
+author:              
+    - Emiliano Bruni <info@ebruni.it>
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     HTML::Parser:                  0
     HTML::Template::Pro:           0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
